--- a/siteDjango/women/templates/women/base.html
+++ b/siteDjango/women/templates/women/base.html
@@ -75,9 +75,7 @@
         <td valign="top">
           <div id="footer">
             <p>
-              &copy; 2021 Частичное или полное копирование информации с данного
-              сайта для распространения на других ресурсах, в том числе и
-              бумажных, строго запрещено.
+              &copy; Все права защищены
             </p>
           </div>
         </td>
